Upgraded deprecated APIs to new ones